SideMenu functional now

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Tickify.click - Create, manage, and enhance your events with ease. Perfect for organizers and attendees alike.">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="icon" href="/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" href="/favicon-16x16.png" sizes="16x16" />
+   <link rel="icon" type="image/png" sizes="48x48" href="/src/Frontend/assets/Tickfy_Logo_01-6_page-0001-removebg-preview.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
