--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <title>Tickify.click</title>
   </head>
   <body>
-    <div id="root">
-      <h1>Loading Tickify...</h1>
-    </div>
+    <div id="root"></div>
     <script type="module" async src="/src/main.jsx"></script>
   </body>
 </html>
