--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tickify.click - Create, manage, and enhance your events with ease. Perfect for organizers and attendees alike.">
-    <meta name="theme-color" content="#b30d0d">
+   <!--meta name="theme-color" content="#b30d0d"--> 
     <meta property="og:title" content="Tickify.click - Simplify Event Management">
     <meta property="og:description" content="Create, manage, and enhance your events with ease. Perfect for organizers and attendees alike.">
     <meta property="og:image" content="/src/Frontend/assets/Tickify_Logo_01-6_page-0001-removebg-preview.svg">
     <meta property="og:url" content="https://tickify.click">
     <meta property="og:type" content="website">
     
-    <link rel="icon" type="image/svg+xml" href="/src/Frontend/assets/Tickfy_Logo_01-6_page-0001-removebg-preview.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/Frontend/assets/Tickfy Logo 01-6_page-0001.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
